--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "gamePitela",
-    "slug": "gamePitela",
+    "name": "Advinha",
+    "slug": "Advinha",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
